Structure refactor, GPT-4 dataset generation started

--- a/src/analysis/evaluation/metrics.ipynb
+++ b/src/analysis/evaluation/metrics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
     }
    ],
    "source": [
-    "identity_pipeline_scores = load_scores('../../plays/evaluation/role_fitness/identity.csv')\n",
+    "identity_pipeline_scores = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/identity.csv')\n",
     "identity_pipeline_scores\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "role_fitness_0_scores = load_scores('../../plays/evaluation/role_fitness/rf_0.csv')\n",
+    "role_fitness_0_scores = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/rf_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_0_scores)\n",
     "\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "role_fitness_1_scores = load_scores('../../plays/evaluation/role_fitness/rf_1.csv')\n",
+    "role_fitness_1_scores = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/rf_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_1_scores)\n",
     "\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
     }
    ],
    "source": [
-    "role_fitness_2_scores = load_scores('../../plays/evaluation/role_fitness/rf_2.csv')\n",
+    "role_fitness_2_scores = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/rf_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_2_scores)\n",
     "\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
     }
    ],
    "source": [
-    "role_fitness_3_scores = load_scores('../../plays/evaluation/role_fitness/rf_3.csv')\n",
+    "role_fitness_3_scores = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/rf_3.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(role_fitness_3_scores)\n",
     "\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "ll_rf_0 = load_scores('../../plays/evaluation/role_fitness/ll_rf_0.csv')\n",
+    "ll_rf_0 = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/ll_rf_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_0)\n",
     "\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
     }
    ],
    "source": [
-    "ll_rf_1 = load_scores('../../plays/evaluation/role_fitness/ll_rf_1.csv')\n",
+    "ll_rf_1 = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/ll_rf_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_1)\n",
     "\n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
     }
    ],
    "source": [
-    "ll_rf_2 = load_scores('../../plays/evaluation/role_fitness/ll_rf_2.csv')\n",
+    "ll_rf_2 = load_scores('../../plays/gpt-3.5/evaluation/role_fitness/ll_rf_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_2)\n",
     "\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "17  3.833333  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -840,23 +840,13 @@
        "0  4.074074  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "total_scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_scores.to_csv('./role_fitness_total_scores.csv')\n",
-    "role_fitness_scores.to_csv('./role_fitness_scores.csv')"
    ]
   },
   {
@@ -870,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +871,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "language_level_level_scores['level'] = ['A1', 'A2', 'B1', 'B2', 'C1', 'C2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +920,7 @@
     }
    ],
    "source": [
-    "identity_pipeline_scores_ll = load_scores('../../plays/evaluation/language_level/identity.csv')\n",
+    "identity_pipeline_scores_ll = load_scores('../../plays/gpt-3.5/evaluation/language_level/identity.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores_ll)\n",
     "\n",
@@ -949,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +988,7 @@
     }
    ],
    "source": [
-    "ll_0_scores = load_scores('../../plays/evaluation/language_level/ll_0.csv')\n",
+    "ll_0_scores = load_scores('../../plays/gpt-3.5/evaluation/language_level/ll_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_0_scores)\n",
     "\n",
@@ -1017,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1056,7 @@
     }
    ],
    "source": [
-    "ll_1_scores = load_scores('../../plays/evaluation/language_level/ll_1.csv')\n",
+    "ll_1_scores = load_scores('../../plays/gpt-3.5/evaluation/language_level/ll_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_1_scores)\n",
     "\n",
@@ -1085,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1124,7 @@
     }
    ],
    "source": [
-    "ll_2_scores = load_scores('../../plays/evaluation/language_level/ll_2.csv')\n",
+    "ll_2_scores = load_scores('../../plays/gpt-3.5/evaluation/language_level/ll_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_2_scores)\n",
     "\n",
@@ -1153,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1192,7 @@
     }
    ],
    "source": [
-    "ll_rf_0 = load_scores('../../plays/evaluation/language_level/ll_rf_0.csv')\n",
+    "ll_rf_0 = load_scores('../../plays/gpt-3.5/evaluation/language_level/ll_rf_0.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_0)\n",
     "\n",
@@ -1221,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1260,7 @@
     }
    ],
    "source": [
-    "ll_rf_1 = load_scores('../../plays/evaluation/language_level/ll_rf_1.csv')\n",
+    "ll_rf_1 = load_scores('../../plays/gpt-3.5/evaluation/language_level/ll_rf_1.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_1)\n",
     "\n",
@@ -1289,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1328,7 @@
     }
    ],
    "source": [
-    "ll_rf_2 = load_scores('../../plays/evaluation/language_level/ll_rf_2.csv')\n",
+    "ll_rf_2 = load_scores('../../plays/gpt-3.5/evaluation/language_level/ll_rf_2.csv')\n",
     "\n",
     "avg_dialogue_scores, total_avg = calcualate_metrics(ll_rf_2)\n",
     "\n",
@@ -1357,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1409,7 @@
        "0  2.407407  2.592593  2.518519  2.574074  2.648148  2.592593  2.611111"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1660,7 @@
        "17  2.500000  2.500000  3.000000  2.666667  2.500000  2.500000  2.333333"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1696,6 +1695,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>level</th>\n",
        "      <th>identity</th>\n",
        "      <th>ll_0</th>\n",
        "      <th>ll_1</th>\n",
@@ -1708,6 +1708,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>A1</td>\n",
        "      <td>1.666667</td>\n",
        "      <td>2.444444</td>\n",
        "      <td>2.333333</td>\n",
@@ -1718,6 +1719,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>A2</td>\n",
        "      <td>2.833333</td>\n",
        "      <td>2.166667</td>\n",
        "      <td>2.611111</td>\n",
@@ -1728,6 +1730,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>B1</td>\n",
        "      <td>2.444444</td>\n",
        "      <td>2.722222</td>\n",
        "      <td>2.055556</td>\n",
@@ -1738,6 +1741,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>B2</td>\n",
        "      <td>2.500000</td>\n",
        "      <td>2.722222</td>\n",
        "      <td>2.500000</td>\n",
@@ -1748,6 +1752,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>C1</td>\n",
        "      <td>2.555556</td>\n",
        "      <td>2.777778</td>\n",
        "      <td>2.777778</td>\n",
@@ -1758,6 +1763,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>C2</td>\n",
        "      <td>2.444444</td>\n",
        "      <td>2.722222</td>\n",
        "      <td>2.833333</td>\n",
@@ -1771,16 +1777,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   identity      ll_0      ll_1      ll_2   ll_rf_0   ll_rf_1   ll_rf_2\n",
-       "0  1.666667  2.444444  2.333333  2.222222  2.833333  2.388889  2.666667\n",
-       "1  2.833333  2.166667  2.611111  2.833333  2.555556  2.833333  2.666667\n",
-       "2  2.444444  2.722222  2.055556  2.500000  2.444444  2.444444  2.666667\n",
-       "3  2.500000  2.722222  2.500000  2.555556  2.888889  2.666667  2.611111\n",
-       "4  2.555556  2.777778  2.777778  2.611111  2.833333  2.722222  2.611111\n",
-       "5  2.444444  2.722222  2.833333  2.722222  2.333333  2.500000  2.444444"
+       "  level  identity      ll_0      ll_1      ll_2   ll_rf_0   ll_rf_1   ll_rf_2\n",
+       "0    A1  1.666667  2.444444  2.333333  2.222222  2.833333  2.388889  2.666667\n",
+       "1    A2  2.833333  2.166667  2.611111  2.833333  2.555556  2.833333  2.666667\n",
+       "2    B1  2.444444  2.722222  2.055556  2.500000  2.444444  2.444444  2.666667\n",
+       "3    B2  2.500000  2.722222  2.500000  2.555556  2.888889  2.666667  2.611111\n",
+       "4    C1  2.555556  2.777778  2.777778  2.611111  2.833333  2.722222  2.611111\n",
+       "5    C2  2.444444  2.722222  2.833333  2.722222  2.333333  2.500000  2.444444"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1794,11 +1800,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "language_level_total_scores.to_csv('./language_level_total_scores.csv')\n",
-    "language_level_scores.to_csv('./language_level_scores.csv')\n",
-    "language_level_level_scores.to_csv('./language_level_level_scores.csv')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
