Compound pipeline metrics

--- a/src/analysis/evaluation/gpt-3.5/compound_metrics.ipynb
+++ b/src/analysis/evaluation/gpt-3.5/compound_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/identity.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/identity.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "\n",
     "role_fitness_scores['identity'] = avg_dialogue_scores\n",
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/rf_3-ll_rf_0.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/rf_3-ll_rf_0.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "\n",
     "role_fitness_scores['rf_3-ll_rf_0'] = avg_dialogue_scores\n",
@@ -117,13 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/rf_3-ll_1.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/rf_3-ll_1.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "\n",
     "role_fitness_scores['rf_3-ll_1'] = avg_dialogue_scores\n",
@@ -132,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/rf_3-ll_2.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/role_fitness/rf_3-ll_2.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "\n",
     "role_fitness_scores['rf_3-ll_2'] = avg_dialogue_scores\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,13 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/identity.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/identity.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "avg_scores_per_ll = []\n",
     "for i in range(0, 18, 3):\n",
@@ -187,13 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/rf_3-ll_rf_0.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/rf_3-ll_rf_0.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "avg_scores_per_ll = []\n",
     "for i in range(0, 18, 3):\n",
@@ -207,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/rf_3-ll_1.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/rf_3-ll_1.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "avg_scores_per_ll = []\n",
     "for i in range(0, 18, 3):\n",
@@ -226,13 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "identity_pipeline_scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/rf_3-ll_2.csv')\n",
+    "scores = load_scores('../../../plays/gpt-3.5/evaluation/language_level/rf_3-ll_2.csv')\n",
     "\n",
-    "avg_dialogue_scores, total_avg = calcualate_metrics(identity_pipeline_scores)\n",
+    "avg_dialogue_scores, total_avg = calcualate_metrics(scores)\n",
     "\n",
     "avg_scores_per_ll = []\n",
     "for i in range(0, 18, 3):\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "17  3.333333      4.333333   4.166667   4.000000"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "17  2.500000      3.000000   3.000000   2.833333"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "0  4.009259      4.194444    4.12963   4.046296"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "0  2.407407      2.833333   2.935185   2.925926"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "5    C2  2.444444      2.944444   3.000000   2.888889"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
