--- a/src/analysis/summarization.ipynb
+++ b/src/analysis/summarization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.bots.summarization_bot import SummarizationBot"
+    "from src.bots.summarization_bot import SummarizationBot\n",
+    "from src.parameters import summarization_parametes\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,26 +69,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer orders a cappuccino but is told that the coffee machine is broken. The waiter suggests trying one of their freshly squeezed juices instead.\n",
-      "CHARS:  152\n",
-      "WORDS:  25\n",
+      "SUMMARY:  The customer wants a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests choosing a different beverage, such as a freshly squeezed juice.\n",
+      "CHARS:  180\n",
+      "WORDS:  29\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer decides to try the apricot juice based on the waiter's recommendation.\n",
-      "CHARS:  83\n",
-      "WORDS:  13\n",
+      "SUMMARY:  The customer asks for a recommendation after learning that the coffee machine is broken. The waiter suggests the apricot juice, emphasizing its rich flavor. The customer decides to go with the apricot juice.\n",
+      "CHARS:  207\n",
+      "WORDS:  33\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer asks the waiter if they have any cakes. The waiter says they have several different tarts, including a freshly baked blueberry tart. The customer decides to order the blueberry tart.\n",
-      "CHARS:  195\n",
-      "WORDS:  32\n"
+      "SUMMARY:  The customer asks if there are any cakes available. The waiter confirms that there are several different tarts and specifically mentions a freshly baked blueberry tart. The customer decides to order the blueberry tart.\n",
+      "CHARS:  218\n",
+      "WORDS:  34\n"
      ]
     }
    ],
    "source": [
-    "bot = SummarizationBot(0)\n",
+    "bot = SummarizationBot(0, parameters=summarization_parametes)\n",
     "\n",
-    "sum1 = bot.send('', example_dialogue[:3])\n",
+    "sum1 = bot.send('', '\\n'.join(example_dialogue[:3]))\n",
     "\n",
     "print()\n",
     "print('SUMMARY: ', sum1)\n",
@@ -94,7 +96,7 @@
     "print('WORDS: ', len(sum1.split()))\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum2 = bot.send(sum1, example_dialogue[3:6])\n",
+    "sum2 = bot.send(sum1, '\\n'.join(example_dialogue[3:6]))\n",
     "print()\n",
     "print('SUMMARY: ', sum2)\n",
     "print('CHARS: ', len(sum2))\n",
@@ -102,7 +104,7 @@
     "\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum3 = bot.send(sum2, example_dialogue[6:])\n",
+    "sum3 = bot.send(sum2, '\\n'.join(example_dialogue[6:]))\n",
     "print()\n",
     "print('SUMMARY: ', sum3)\n",
     "print('CHARS: ', len(sum3))\n",
@@ -126,26 +128,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer wants to order a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer chooses something else from the variety of freshly squeezed juices available.\n",
-      "CHARS:  220\n",
-      "WORDS:  35\n",
+      "SUMMARY:  The waiter greets the customer and asks for their order. The customer requests a cappuccino, but the waiter explains that their coffee machine is broken. They offer the customer a selection of freshly squeezed juices instead.\n",
+      "CHARS:  225\n",
+      "WORDS:  36\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer wants to order a cappuccino, but is informed by the waiter that the coffee machine is broken. The waiter suggests choosing something else from the variety of freshly squeezed juices available. The customer agrees and asks for a recommendation. The waiter suggests the apricot juice, highlighting its rich flavor. The customer decides to go with the apricot juice.\n",
-      "CHARS:  376\n",
-      "WORDS:  60\n",
+      "SUMMARY:  The customer arrives at the cafe and learns that the coffee machine is broken. They decide to order an apricot juice based on the waiter's recommendation.\n",
+      "CHARS:  154\n",
+      "WORDS:  26\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer initially wanted to order a cappuccino, but was told that the coffee machine was broken. The waiter suggested trying one of the freshly squeezed juices instead. The customer agreed and asked for a recommendation. The waiter suggested the apricot juice, which the customer decided to go with. Later, the customer asked if they had any cakes, specifically a blueberry tart. The waiter confirmed that they did have a freshly baked blueberry tart and the customer ordered it.\n",
-      "CHARS:  484\n",
-      "WORDS:  79\n"
+      "SUMMARY:  The customer arrives at the cafe and learns that the coffee machine is broken. They decide to order an apricot juice based on the waiter's recommendation. The waiter returns and the customer asks if they have any cakes. The waiter confirms that they have several different tarts, including a blueberry tart. The customer decides to order a blueberry tart along with the apricot juice.\n",
+      "CHARS:  384\n",
+      "WORDS:  64\n"
      ]
     }
    ],
    "source": [
-    "bot = SummarizationBot(1)\n",
+    "bot = SummarizationBot(1, summarization_parametes)\n",
     "\n",
-    "sum1 = bot.send('', example_dialogue[:3])\n",
+    "sum1 = bot.send('', '\\n'.join(example_dialogue[:3]))\n",
     "\n",
     "print()\n",
     "print('SUMMARY: ', sum1)\n",
@@ -153,7 +155,7 @@
     "print('WORDS: ', len(sum1.split()))\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum2 = bot.send(sum1, example_dialogue[3:6])\n",
+    "sum2 = bot.send(sum1, '\\n'.join(example_dialogue[3:6]))\n",
     "print()\n",
     "print('SUMMARY: ', sum2)\n",
     "print('CHARS: ', len(sum2))\n",
@@ -161,7 +163,7 @@
     "\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum3 = bot.send(sum2, example_dialogue[6:])\n",
+    "sum3 = bot.send(sum2, '\\n'.join(example_dialogue[6:]))\n",
     "print()\n",
     "print('SUMMARY: ', sum3)\n",
     "print('CHARS: ', len(sum3))\n",
@@ -185,26 +187,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter offers a variety of freshly squeezed juices instead.\n",
-      "CHARS:  130\n",
-      "WORDS:  21\n",
+      "SUMMARY:  The customer goes to a cafe and asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests they try a freshly squeezed juice instead.\n",
+      "CHARS:  180\n",
+      "WORDS:  32\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter recommends the apricot juice and the customer agrees to try it.\n",
-      "CHARS:  141\n",
-      "WORDS:  24\n",
+      "SUMMARY:  The customer goes to a cafe and asks for a cappuccino, but the coffee machine is broken. The waiter suggests trying freshly squeezed juice, and recommends the apricot juice. The customer agrees and decides to have the apricot juice.\n",
+      "CHARS:  232\n",
+      "WORDS:  39\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer initially wanted a cappuccino, but the coffee machine was broken. The waiter recommended apricot juice and the customer agreed to try it. Later, the customer asked if there were any cakes available. The waiter confirmed that they had several different tarts, including a freshly baked blueberry tart. The customer thanked the waiter and ordered the blueberry tart.\n",
-      "CHARS:  377\n",
-      "WORDS:  59\n"
+      "SUMMARY:  The customer goes to a cafe and orders a cappuccino, but the coffee machine is broken. The waiter suggests apricot juice instead and the customer agrees. Later, the customer asks for a blueberry tart and the waiter confirms that they have one and brings it to the customer.\n",
+      "CHARS:  273\n",
+      "WORDS:  48\n"
      ]
     }
    ],
    "source": [
-    "bot = SummarizationBot(2)\n",
+    "bot = SummarizationBot(2, summarization_parametes)\n",
     "\n",
-    "sum1 = bot.send('', example_dialogue[:3])\n",
+    "sum1 = bot.send('', '\\n'.join(example_dialogue[:3]))\n",
     "\n",
     "print()\n",
     "print('SUMMARY: ', sum1)\n",
@@ -212,7 +214,7 @@
     "print('WORDS: ', len(sum1.split()))\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum2 = bot.send(sum1, example_dialogue[3:6])\n",
+    "sum2 = bot.send(sum1, '\\n'.join(example_dialogue[3:6]))\n",
     "print()\n",
     "print('SUMMARY: ', sum2)\n",
     "print('CHARS: ', len(sum2))\n",
@@ -220,7 +222,7 @@
     "\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum3 = bot.send(sum2, example_dialogue[6:])\n",
+    "sum3 = bot.send(sum2, '\\n'.join(example_dialogue[6:]))\n",
     "print()\n",
     "print('SUMMARY: ', sum3)\n",
     "print('CHARS: ', len(sum3))\n",
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -244,30 +246,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  Previous summary + Dialogue:\n",
-      "\n",
-      "$$The customer wanted a cappuccino but the coffee machine was broken. The waiter offered a variety of freshly squeezed juices as an alternative.##\n",
-      "\n",
-      "The customer requested a cappuccino, but the coffee machine was out of order. The waiter suggested choosing from their wide selection of fresh juices instead.\n",
-      "CHARS:  336\n",
-      "WORDS:  52\n",
+      "SUMMARY:  Waiter informs the customer that the coffee machine is broken and offers a variety of freshly squeezed juices as an alternative.\n",
+      "CHARS:  128\n",
+      "WORDS:  21\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer requested a cappuccino, but the coffee machine was out of order. The waiter suggested choosing from their wide selection of fresh juices instead. The waiter recommended the apricot juice for its rich flavor, and the customer agreed to try it.\n",
-      "CHARS:  255\n",
-      "WORDS:  42\n",
+      "SUMMARY:  The waiter informs the customer that the coffee machine is broken and suggests trying a variety of freshly squeezed juices instead. The customer expresses interest and asks for a recommendation. The waiter highly recommends the apricot juice, assuring the customer that it is full of flavor. The customer agrees and decides to go with the apricot juice.\n",
+      "CHARS:  353\n",
+      "WORDS:  57\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer requested a cappuccino, but the coffee machine was out of order. The waiter suggested choosing from their wide selection of fresh juices instead. The waiter recommended the apricot juice for its rich flavor. The customer agreed to try it and also asked if they had any cakes. The waiter informed them that they had several different tarts, including a freshly baked blueberry tart. The customer ordered the blueberry tart and thanked the waiter.\n",
-      "CHARS:  458\n",
-      "WORDS:  75\n"
+      "SUMMARY:  The waiter informs the customer that the coffee machine is broken and suggests trying a variety of freshly squeezed juices instead. The customer expresses interest and asks for a recommendation. The waiter highly recommends the apricot juice, assuring the customer that it is full of flavor. The customer agrees and decides to go with the apricot juice. In addition to that, the customer also asks the waiter if they have any cakes. The waiter confirms that they have several different tarts and specifically mentions the availability of a freshly baked blueberry tart. The customer happily orders one blueberry tart.\n",
+      "CHARS:  617\n",
+      "WORDS:  99\n"
      ]
     }
    ],
    "source": [
-    "bot = SummarizationBot(3)\n",
+    "bot = SummarizationBot(3, summarization_parametes)\n",
     "\n",
-    "sum1 = bot.send('', example_dialogue[:3])\n",
+    "sum1 = bot.send('', '\\n'.join(example_dialogue[:3]))\n",
     "\n",
     "print()\n",
     "print('SUMMARY: ', sum1)\n",
@@ -275,7 +273,7 @@
     "print('WORDS: ', len(sum1.split()))\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum2 = bot.send(sum1, example_dialogue[3:6])\n",
+    "sum2 = bot.send(sum1, '\\n'.join(example_dialogue[3:6]))\n",
     "print()\n",
     "print('SUMMARY: ', sum2)\n",
     "print('CHARS: ', len(sum2))\n",
@@ -283,7 +281,7 @@
     "\n",
     "print('----------------------------------')\n",
     "\n",
-    "sum3 = bot.send(sum2, example_dialogue[6:])\n",
+    "sum3 = bot.send(sum2, '\\n'.join(example_dialogue[6:]))\n",
     "print()\n",
     "print('SUMMARY: ', sum3)\n",
     "print('CHARS: ', len(sum3))\n",
