Notebook imports refined

--- a/src/analysis/summarization.ipynb
+++ b/src/analysis/summarization.ipynb
@@ -13,10 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from notebook_init import notebook_init, notebook_imports\n",
+    "import sys\n",
+    "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning\")\n",
+    "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning/src\") \n",
+    "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning/src/templates\") \n",
     "\n",
-    "notebook_init()\n",
-    "notebook_imports()\n"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -25,9 +28,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import openai\n",
+    "\n",
     "from src.bots.summarization_bot import SummarizationBot\n",
     "from src.parameters import summarization_parametes\n",
-    "\n"
+    "\n",
+    "openai.api_key = keys.OPENAI_API_KEY"
    ]
   },
   {
